force-app/main/default/objects/Contract__c/fields/Buyer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Comment__c</fullName>
    <label>Buyer Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>