force-app/main/default/objects/Contract__c/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Consumer)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>