force-app/main/default/objects/Contract__c/fields/Consumer_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Record_Owner__c</fullName>
    <formula>IF(  Buyer__c  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer Record Owner</label>
    <type>Checkbox</type>
</CustomField>