force-app/main/default/objects/Contract__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>SAP Contract Number created on SAP.</description>
    <inlineHelpText>SAP Contract Number</inlineHelpText>
    <label>Consumer Contract number</label>
    <type>TextArea</type>
</CustomField>