force-app/main/default/objects/Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCSS</fullName>
            </value>
            <value>
                <fullName>HCPS</fullName>
            </value>
            <value>
                <fullName>HCPO</fullName>
            </value>
            <value>
                <fullName>HCSO</fullName>
            </value>
            <value>
                <fullName>HCPF</fullName>
            </value>
            <value>
                <fullName>HCSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>