force-app/main/default/objects/Contract__c/fields/Counter_Party__c.field-meta.xml
<CustomField>
    <fullName>Counter_Party__c</fullName>
    <label>Counter Party</label>
    <length>20</length>
    <type>Text</type>
</CustomField>