force-app/main/default/objects/Contract__c/fields/DistChannel__c.field-meta.xml
<CustomField>
    <fullName>DistChannel__c</fullName>
    <label>DistChannel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H1</fullName>
            </value>
            <value>
                <fullName>H2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>