force-app/main/default/objects/Contract__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factory</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>