force-app/main/default/objects/Contract__c/fields/Factory_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Factory_Symbol__c</fullName>
    <formula>Factory__r.Factory_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factory Symbol</label>
    <type>Text</type>
</CustomField>