force-app/main/default/objects/Contract__c/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <label>Incoterm</label>
    <length>30</length>
    <type>Text</type>
</CustomField>