force-app/main/default/objects/Contract__c/fields/Material_Text__c.field-meta.xml
<CustomField>
    <fullName>Material_Text__c</fullName>
    <formula>Material__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Text</label>
    <type>Text</type>
</CustomField>