force-app/main/default/objects/Contract__c/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>