force-app/main/default/objects/Contract__c/fields/Payment_Term_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Description__c</fullName>
    <label>Payment Term Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>