force-app/main/default/objects/Contract__c/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <label>Port</label>
    <length>40</length>
    <type>Text</type>
</CustomField>