force-app/main/default/objects/Contract__c/fields/Producer_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Producer_Contract_Date__c</fullName>
    <label>Producer Contract Date</label>
    <type>Date</type>
</CustomField>