force-app/main/default/objects/Contract__c/fields/Producer_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Producer_Contract_Number__c</fullName>
    <label>Producer Contract Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>