force-app/main/default/objects/Contract__c/fields/Producer_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Producer_Record_Owner__c</fullName>
    <formula>IF(  Seller__c  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer Record Owner</label>
    <type>Checkbox</type>
</CustomField>