force-app/main/default/objects/Contract__c/fields/Receiving_Port_Port_of_Discharge_POD__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Port_Port_of_Discharge_POD__c</fullName>
    <formula>Destination__r.Port_of_Discharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiving Port / Port of Discharge (POD)</label>
    <type>Text</type>
</CustomField>