force-app/main/default/objects/Contract__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <label>Sales Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H01</fullName>
            </value>
            <value>
                <fullName>H02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>