force-app/main/default/objects/Contract__c/fields/Seller_Comment__c.field-meta.xml
<CustomField>
    <fullName>Seller_Comment__c</fullName>
    <label>Seller Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>