force-app/main/default/objects/Contract__c/fields/Trade_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_Date__c</fullName>
    <label>Trade Date</label>
    <type>DateTime</type>
</CustomField>