force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buyer__c</columns>
    <columns>Seller__c</columns>
    <columns>Price__c</columns>
    <columns>Volume__c</columns>
    <columns>Material__c</columns>
    <columns>Factory__c</columns>
    <columns>Factory_Symbol__c</columns>
    <columns>Port__c</columns>
    <columns>Trade_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>