force-app/main/default/objects/Contract__c/listViews/MY_CONTRACTS.listView-meta.xml
<ListView>
    <fullName>MY_CONTRACTS</fullName>
    <columns>NAME</columns>
    <columns>Buyer__c</columns>
    <columns>Seller__c</columns>
    <columns>Price__c</columns>
    <columns>Volume__c</columns>
    <columns>Trade_Date__c</columns>
    <columns>Material__c</columns>
    <columns>Factory__c</columns>
    <columns>Factory_Symbol__c</columns>
    <columns>Port__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Consumer_Record_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MY CONTRACTS</label>
</ListView>